<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnvioActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/background_color"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/logotimefast"
            />

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/mis_envios_titulo_pantalla"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="25sp"
            android:gravity="center_vertical"
            />

        <ImageView
            android:id="@+id/icono_perfil_usuario"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/account"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/envio_titulo"
            android:textSize="25sp"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/carrito_timefast"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_card_recycle_header"
            android:padding="15dp"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="No Guia:"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tv_no_guia"
                android:text="@string/envio_no_guia"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envio_origen_text"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            />
            <TextView
                android:id="@+id/tvOrigen"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Portugal, Lisboa"
                android:textColor="@color/text_color"
                android:layout_marginTop="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envio_destino_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:id="@+id/tvDestino"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Xalapa, Veracruz"
                android:textColor="@color/text_color"
                android:layout_marginTop="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envio_paquetes_contenidos_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:id="@+id/tvPaquetes"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="4 paquetes"
                android:textColor="@color/text_color"
                android:layout_marginTop="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envio_contacto_cliente_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:text="@string/envio_nombre_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tvNombreCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fulanito Córdoba Vega"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:text="@string/envio_telefono_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tvNumCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2283010287"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:text="@string/envio_correo_text"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tvCorreoCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="correo@gmail.com"
                    android:textColor="@color/text_color"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/envio_comentarios_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                />

            <EditText
                android:id="@+id/my_text_area"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="Escribe tu texto aquí"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mis_envios_card_estatus"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                />
            <Spinner
                android:id="@+id/combo_estatus"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
   <LinearLayout
       android:layout_width="350dp"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:weightSum="2"
       android:layout_marginStart="30dp"
       android:layout_marginTop="50dp"
       >
       <Button
           android:id="@+id/btn_cancelar_cambio_envio"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/envio_boton_cancelar"

           android:background="@drawable/shape_secondary_button"
           android:textColor="@color/secondary_color"
           android:layout_marginEnd="50dp"
           />

       <Button
           android:id="@+id/btn_guardar_cambios_envio"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/envio_boton_guardar"
           android:background="@drawable/shape_login_button"
           android:textColor="@color/white"
           />
   </LinearLayout>

</LinearLayout>