<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/background_color"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logotimefast"
            />

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/mis_envios_titulo_pantalla"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="25sp"
            android:gravity="center_vertical"
            />

        <ImageView
            android:id="@+id/iconono_perfil_usuario"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/account"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil_titulo"
            android:textSize="25sp"
            android:textColor="@color/background_color"
            android:textStyle="normal"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/account"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_card_recycle_header"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No. Personal:"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:id="@+id/tv_no_personal"
                android:text="12345"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mi_perfil_nombre_text"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        />
                    <EditText
                        android:id="@+id/et_nombre"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/mi_perfil_nombre_text"
                        android:background="@drawable/shape_edit_text"
                        android:padding="4dp"
                        android:textColorHint="@color/primary_color"
                        android:textColor="@color/primary_color"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        app:endIconMode="password_toggle"
                        android:layout_marginBottom="15dp"
                        />

                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_foto_perfil"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/image"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:background="@drawable/iv_style"
                    />
                <ImageView
                    android:id="@+id/iv_cambiar_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pencil"
                    android:layout_gravity="start"/>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_perfil_apellido_paterno_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                />

            <EditText
                android:id="@+id/et_apellido_Paterno"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mi_perfil_apellido_paterno_text"
                android:background="@drawable/shape_edit_text"
                android:padding="4dp"
                android:textColorHint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_perfil_apellido_materno_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                />
            <EditText
                android:id="@+id/et_apellido_Materno"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mi_perfil_apellido_materno_text"
                android:background="@drawable/shape_edit_text"
                android:padding="4dp"
                android:textColorHint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_perfil_no_licencia_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
            />
            <EditText
                android:id="@+id/et_no_licencia"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mi_perfil_contrasena_text"
                android:background="@drawable/shape_edit_text"
                android:padding="4dp"
                android:textColorHint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_perfil_correo_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mi_perfil_correo_text"
                android:background="@drawable/shape_edit_text"
                android:padding="4dp"
                android:textColorHint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="15dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_perfil_contrasena_text"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                />
            <EditText
                android:id="@+id/et_contrasena"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mi_perfil_contrasena_et"
                android:background="@drawable/shape_edit_text"
                android:padding="4dp"
                android:textColorHint="@color/primary_color"
                android:textColor="@color/primary_color"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:endIconMode="password_toggle"
                android:layout_marginBottom="15dp"
                />


        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="bottom"
        >
        <Button
            android:id="@+id/btn_cancelar_cambio_envio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/envio_boton_cancelar"
            android:background="@drawable/shape_secondary_button"
            android:textColor="@color/secondary_color"
            android:layout_marginEnd="50dp"
            />

        <Button
            android:id="@+id/btn_guardar_cambios_envio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil_actualizar_button"
            android:background="@drawable/shape_login_button"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>